# synth

./: .travis.yml  Cargo.toml  LICENSE  README.md
examples/: simple.rs  test.rs
src/: dsp_node.rs  dynamic.rs  env_point.rs  envelope.rs  lib.rs  mode.rs  note_freq.rs  oscillator.rs  serde.rs  synth.rs  voice.rs  waveform.rs
src/oscillator/: amplitude.rs  freq_warp.rs  frequency.rs  mod.rs  waveform.rs
